--- a/frontend/templates/layout.html
+++ b/frontend/templates/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/page.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/d3_timeseries.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-select.min.css') }}">
-
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/all.css') }}">
     
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/d3/d3.min.js') }}"></script>
