--- a/frontend/templates/model.html
+++ b/frontend/templates/model.html
@@ -34,6 +34,9 @@
             <legend class="scheduler-border">Service Selection</legend>
             <div class="col-sm-12 selection-panel service-selection-panel">
                 <div class="row type-row" id="select-service">
+                    <i id="gear1" class="fa fa-5x fa-gear spin"></i>
+                    <i id="gear2" class="fa fa-5x fa-gear spin-back"></i>
+                    <i id="gear3" class="fa fa-5x fa-gear spin"></i>
                 </div>
                 <div class="row type-row">
                     <div class="col-md-12 service-panel-button">
