--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,8 +3,8 @@
     <div class="col-sm-3 panel" id="left-most-panel">
         <fieldset class="scheduler-border" id="fieldset-lmp">
             <legend class="scheduler-border" id="legend-lmp">How To Begin</legend>
-            <div class="row form-group" id="row-job-select">
-                <div class="col-sm-11">
+            <div class="row form-group fieldset-row" id="row-job-select">
+                <div class="col-sm-12">
                     <div class="form-group">
                         <select class="selectpicker form-control" title="Choose Job ID" id="select-job-id" data-live-search="true" data-selected-text-format="count">
                         {% for key in job_keys %}
@@ -14,50 +14,48 @@
                     </div>
                 </div>
             </div>
-            <div class="row form-group" id="row-lmp">
+            <div class="row form-group fieldset-row editable-view" id="opts-type">
                 <div class="col-sm-6">
                     <button type="button" class="btn btn-primary btn-sm btn-block" id="btn-make-building">Build From Scratch</button>
                 </div>
-                <div class="col-sm-5">
-                    <button type="button" class="btn btn-secondary btn-sm btn-block" id="btn-upload-file" data-toggle="modal" data-target="#mdl-upload-file">Upload Building</button>
+                <div class="col-sm-6">
+                    <button type="button" class="btn btn-secondary btn-sm btn-block" id="btn-upload-file" data-toggle="modal" data-target="#mdl-upload-file">Upload Building File</button>
                 </div>
             </div>
         </fieldset>
     </div>
     <div class="col-sm-3 panel hidden" id="middle-panel">
-        <fieldset class="scheduler-border">
-            <legend class="scheduler-border">Configuration Panel</legend>
-            <div class="col-sm-12 form-group configuration-form">
-                <form>
-                    <div class="row form-group">
-                        <label for="nfloors" class="col-sm-4 col-form-label">Number of Floors: </label>
-                        <div class="col-sm-4">
-                            <input type="text" class="form-control" id="nfloors" name="nfloors">
-                        </div>
+        <fieldset class="scheduler-border" id="fieldset-mp">
+            <legend class="scheduler-border" id="legend-mp">Configuration Panel</legend>
+            <form>
+                <div class="row form-group fieldset-row">    
+                    <label for="nfloors" class="col-sm-6">Number of Floors: </label>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control text-center" id="nfloors" name="nfloors">
                     </div>
-                    <div class="row form-group floor-panel">
-                        <label for="floor-wise-zones" class="col-sm-12 col-form-label">Number of Zones (Floor Wise)</label>
-                        <div class="col-sm-12 floor-wise">
-                            <div class="row floor-list"></div>
-                        </div>
+                </div>
+                <div class="row form-group fieldset-row">    
+                    <label for="floor-wise-zones" class="col-sm-12">Number of Zones (Floor Wise)</label>
+                    <div class="col-sm-12">
+                        <div class="row no-gutters" id="floor-list"></div>
                     </div>
                 </form>
             </div>
         </fieldset>
     </div>
     <div class="col-sm-5 panel hidden" id="right-most-panel">
-        <fieldset class="scheduler-border">
-            <legend class="scheduler-border">Summary Panel</legend>
-            <div class="row building-box-row">
-                <div class="col-sm-6 justify-content-center building-box">
+        <fieldset class="scheduler-border" id="fieldset-rmp">
+            <legend class="scheduler-border" id="fieldset-rmp">Summary Panel</legend>
+            <div class="row form-group fieldset-row">
+                <div class="col-sm-6 building-box">
                 </div>
-                <div class="col-sm-5 list-of-appliances">
+                <div class="col-sm-6 list-of-appliances">
                 </div>
             </div>
-            <div class="row building-box-buttons">
-                <div class="col-sm-12 building-box-buttons">
-                    <input type="submit" class="btn btn-primary" name="save_building" id="btn-save-building" value="Save Building" />
-                    <input type="submit" class="btn btn-primary" name="learn_model" id="btn-learn-model" value="Build Model" />
+            <div class="row form-group fieldset-row">
+                <div class="col-sm-12">
+                    <button type="button" class="btn btn-primary" name="save_building" id="btn-save-building"/>Save Building</button>
+                    <button type="button" class="btn btn-primary" name="learn_model" id="btn-learn-model"/>Build Model</button>
                 </div>
             </div>
         </fieldset>
