--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="streamList" tabindex="-1" role="dialog" aria-labelledby="streamListTitle" aria-hidden="true">
+    <div class="modal fade" id="stream-list" tabindex="-1" role="dialog" aria-labelledby="stream-list-title" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
