Tested julia connection and added environment variables on the interface

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -47,16 +47,36 @@
         <fieldset class="scheduler-border" id="fieldset-rmp">
             <legend class="scheduler-border" id="fieldset-rmp">Summary Panel</legend>
             <div class="row form-group fieldset-row">
-                <div class="col-sm-6 building-box">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-12 building-box">
+                            
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <button type="button" class="btn btn-primary btn-block" name="save_building" id="btn-save-building"/>Save Building</button>
+                        </div>
+                        <div class="col-sm-6">
+                            <button type="button" class="btn btn-primary" name="learn_model" id="btn-learn-model"/>Build Model</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-6 list-of-appliances">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-12 list-of-appliances">
+                            
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 list-of-exogenous">
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row form-group fieldset-row">
-                <div class="col-sm-12">
-                    <button type="button" class="btn btn-primary" name="save_building" id="btn-save-building"/>Save Building</button>
-                    <button type="button" class="btn btn-primary" name="learn_model" id="btn-learn-model"/>Build Model</button>
-                </div>
+                
             </div>
         </fieldset>
     </div>
